[gd_scene load_steps=16 format=3 uid="uid://bxrqquykmx84m"]

[ext_resource type="Script" uid="uid://becs0yck1yw5h" path="res://main.gd" id="1_h2yge"]
[ext_resource type="PackedScene" uid="uid://qcsoq4ybi1ft" path="res://Player.tscn" id="2_0xm2m"]
[ext_resource type="PackedScene" uid="uid://sqf0fxhm6iq4" path="res://RocketSilo.tscn" id="2_kek77"]
[ext_resource type="Script" uid="uid://do4k1s71n4g5r" path="res://minimap.gd" id="3_5vw27"]
[ext_resource type="Script" uid="uid://dlpbryx5xjmhf" path="res://Room/canvas_layer.gd" id="4_4c57u"]
[ext_resource type="Texture2D" uid="uid://bisqo373e7yky" path="res://Assets/rb_control.png" id="5_kek77"]
[ext_resource type="Script" uid="uid://dpej7xskb62tm" path="res://Room/begin_screen.gd" id="6_7mycd"]
[ext_resource type="Texture2D" uid="uid://j0wh0m5c37j4" path="res://Assets/rb_starship.png" id="7_272bh"]
[ext_resource type="FontFile" uid="uid://oi2k4c3ii1a8" path="res://Font/PixelifySans-VariableFont_wght.ttf" id="8_5vw27"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5vw27"]
atlas = ExtResource("7_272bh")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kek77"]
atlas = ExtResource("7_272bh")
region = Rect2(0, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_7mycd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vw27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kek77")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_4c57u"]
offsets = PackedFloat32Array(0.311475, 0.622951)
colors = PackedColorArray(0.988805, 0.988806, 7.70092e-07, 1, 0.604595, 0.226022, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_y56e4"]
gradient = SubResource("Gradient_4c57u")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_efxa6"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = -100.0
initial_velocity_max = 300.0
gravity = Vector3(0, 98, 0)
scale_min = 5.0
scale_max = 10.0
color = Color(1, 1, 0, 1)
color_ramp = SubResource("GradientTexture1D_y56e4")

[node name="Main" type="Node2D"]
script = ExtResource("1_h2yge")

[node name="RocketSilo" parent="." instance=ExtResource("2_kek77")]

[node name="Player" type="Node" parent="."]

[node name="CharacterBody2D" parent="Player" instance=ExtResource("2_0xm2m")]

[node name="Camera2D" type="Camera2D" parent="."]
process_mode = 3
zoom = Vector2(2, 2)
limit_left = 0
limit_top = 0
limit_right = 3000
limit_bottom = 3000
limit_smoothed = true
position_smoothing_speed = 10.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("4_4c57u")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="Slot1" type="Label" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2

[node name="Slot2" type="Label" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2

[node name="Slot3" type="Label" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2

[node name="Slot4" type="Label" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2

[node name="Slot5" type="Label" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_right = 113.0
offset_bottom = 50.0

[node name="HealthLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="TimerLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="MinimapContainer" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="Minimap Border" type="ColorRect" parent="CanvasLayer/MinimapContainer"]
layout_mode = 0
offset_left = -195.0
offset_top = 15.0
offset_right = 15.0
offset_bottom = 225.0
color = Color(0.42803, 0.244523, 0.238763, 1)

[node name="Minimap" type="ColorRect" parent="CanvasLayer/MinimapContainer"]
layout_mode = 0
offset_left = -190.0
offset_top = 20.0
offset_right = 10.0
offset_bottom = 220.0
color = Color(0.667144, 0.414724, 0.405415, 1)
script = ExtResource("3_5vw27")

[node name="PartsLabel" type="Label" parent="CanvasLayer"]
offset_left = 20.0
offset_top = 60.0
offset_right = 60.0
offset_bottom = 83.0

[node name="RbControl" type="Sprite2D" parent="CanvasLayer"]
z_index = 15
position = Vector2(132, 266)
scale = Vector2(2, 2)
texture = ExtResource("5_kek77")

[node name="Label" type="Label" parent="CanvasLayer/RbControl"]
offset_left = -41.0
offset_top = 92.0
offset_right = 40.0
offset_bottom = 123.0
theme_override_font_sizes/font_size = 10
text = "Right Click
to shoot"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="CanvasLayer/RbControl"]
offset_left = 261.5
offset_top = 36.5
offset_right = 381.5
offset_bottom = 101.5
theme_override_font_sizes/font_size = 10
text = "Find all the ship part
to escape the red planet!

and.... SURVIVE!"
horizontal_alignment = 1

[node name="Notify" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 278.0
offset_top = 107.0
offset_right = 713.0
offset_bottom = 220.0
theme_override_font_sizes/font_size = 40
text = "ALL PARTS COLLECTED
RETURN TO THE SHIP!"

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="WeaponPickupTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="title_screen" type="CanvasLayer" parent="."]
process_mode = 3
process_priority = 10

[node name="title_screen" type="Node2D" parent="title_screen"]

[node name="begin_screen" type="ColorRect" parent="title_screen/title_screen"]
process_mode = 3
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.00825973, 0.117489, 0.246134, 1)
script = ExtResource("6_7mycd")

[node name="star_ship" type="AnimatedSprite2D" parent="title_screen/title_screen/begin_screen"]
z_index = 12
position = Vector2(480, 270)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_7mycd")
autoplay = "default"

[node name="planet" type="Sprite2D" parent="title_screen/title_screen/begin_screen"]
z_index = 11
position = Vector2(1171, 290)
scale = Vector2(20, 20)
texture = ExtResource("7_272bh")
hframes = 2
vframes = 2
frame = 3

[node name="crash_label" type="Label" parent="title_screen/title_screen/begin_screen"]
modulate = Color(1, 1, 1, 0)
z_index = 14
layout_mode = 0
offset_left = 75.0
offset_top = 133.0
offset_right = 692.0
offset_bottom = 442.0
theme_override_fonts/font = ExtResource("8_5vw27")
theme_override_font_sizes/font_size = 35
text = "OH NOOOO!!!!!!!!




YOU CRASH INTO A RED PLANET"

[node name="press_label" type="Label" parent="title_screen/title_screen/begin_screen"]
visible = false
z_index = 14
layout_mode = 0
offset_left = 275.0
offset_top = 413.0
offset_right = 892.0
offset_bottom = 722.0
theme_override_fonts/font = ExtResource("8_5vw27")
theme_override_font_sizes/font_size = 35
text = "Press any key to start!"

[node name="survive_label" type="Label" parent="title_screen/title_screen/begin_screen"]
visible = false
z_index = 14
layout_mode = 0
offset_left = 169.0
offset_top = 415.0
offset_right = 786.0
offset_bottom = 724.0
theme_override_fonts/font = ExtResource("8_5vw27")
theme_override_font_sizes/font_size = 35
text = "YOU SURVIVE!"
horizontal_alignment = 1

[node name="title_label" type="Label" parent="title_screen/title_screen/begin_screen"]
z_index = 14
layout_mode = 0
offset_left = 288.0
offset_top = 74.0
offset_right = 905.0
offset_bottom = 383.0
theme_override_fonts/font = ExtResource("8_5vw27")
theme_override_font_sizes/font_size = 50
text = "Red Planet Crash"

[node name="VisualEffect" type="GPUParticles2D" parent="title_screen/title_screen/begin_screen"]
z_index = 99
position = Vector2(730, 393)
emitting = false
amount = 20
lifetime = 0.5
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_efxa6")

[node name="begin_screen2" type="ColorRect" parent="title_screen/title_screen"]
process_mode = 3
modulate = Color(0, 0.828231, 0.843348, 1)
z_index = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 385.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.00825973, 0.117489, 0.246134, 1)

[node name="begin_screen3" type="ColorRect" parent="title_screen/title_screen"]
process_mode = 3
modulate = Color(0, 0.618374, 0.629898, 1)
z_index = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 481.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.00825973, 0.117489, 0.246134, 1)

[node name="begin_screen4" type="ColorRect" parent="title_screen/title_screen"]
process_mode = 3
modulate = Color(0, 0.828231, 0.843348, 1)
z_index = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 960.0
offset_bottom = 155.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.00825973, 0.117489, 0.246134, 1)

[node name="begin_screen5" type="ColorRect" parent="title_screen/title_screen"]
process_mode = 3
modulate = Color(0, 0.618374, 0.629898, 1)
z_index = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 960.0
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.00825973, 0.117489, 0.246134, 1)

[node name="end_screen" type="ColorRect" parent="title_screen/title_screen"]
process_mode = 3
modulate = Color(0, 0.618374, 0.629898, 1)
z_index = 100
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 960.0
offset_bottom = 539.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
